<resources>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              <!-- Ygor Doring-->
    <string name="app_name">Ajude-se - Saúde e Bem-Estar</string>
    <string name="label_imc">IMC</string>
    <string name="label_tmb">TMB</string>
    <string name="label_sugest">DICAS</string>
    <string name="label_pharm">FARMAS</string>
    <string name="label_water">ÁGUA</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal acima ou abaixo do peso desejado.\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="tmb_desc">A Taxa Metabólica Basal (TMB) é o mínimo de energia necessária para manter as funções do organismo em repouso, como os batimentos cardíacos, a respiração e a manutenção da temperatura corporal.\nPreencha os campos e descubra:</string>
    <string name="name">Seu nome</string>
    <string name="weight">Peso (Kg)</string>
    <string name="height">Digite sua altura (Cm)</string>
    <string name="heightx">Altura (Cm)</string>
    <string name="age">Digite sua idade</string>
    <string name="agex">Sua Idade</string>
    <string name="tmb_age">Digite sua idade</string>
    <string name="calc">CALCULAR</string>
    <string name="fields_messages">Valor deve ser maior do que zero</string>
    <string name="imc_severely_low_weight">Totalmente desnutrido ☢</string>
    <string name="imc_very_low_weight">Abaixo do peso, cuidado!</string>
    <string name="imc_low_weight">Magro!</string>
    <string name="normal">Parabéns! Dentro do peso ✌</string>
    <string name="imc_high_weight">Acima do peso!</string>
    <string name="imc_so_high_weight">Moderadamente obeso 🍩 🍔 🍟</string>
    <string name="imc_severely_high_weight">Severamente obeso.</string>
    <string name="imc_extreme_weight">Procure imediatamente um nutricionista ☠ </string>
    <string name="tmb_error">Defina quantidade de exercício</string>
    <string name="imc_response">Seu IMC é: %1$.2f</string>
    <string name="tmb_response">TMB estimado: %1$.2f kcal</string>
    <string name="list_response">Resultado do dia %2$s: <b>%1$.2f</b></string>
    <string name="details">Salvar</string>
    <string name="saved">Registro salvo com sucesso!</string>
    <string name="search">Registros</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="text_button_calcular">Calcular Ingestão Diária</string>
    <string name="txt_button_lembrete">Criar Lembrete</string>
    <string name="txt_button_alarme">Ativar lembrete</string>
    <string name="txt_hora">00</string>
    <string name="txt_dois_pontos">:</string>
    <string name="txt_min">00</string>
    <string name="toast_informe_peso">Informe seu peso!</string>
    <string name="toast_informe_idade">Informe sua Idade!</string>
    <string name="dialog_titulo">"Redefinir Dados"</string>
    <string name="dialog_descricao">"Deseja excluir todos os dados existentes?"</string>
    <string name="alarm_message">"Hora de Beber água!</string>

</resources>