<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary700"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.viewmodel.TmbActivity">

        <ImageView
            android:layout_width="260dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ajudese_logo_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/radius_sugestions"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp">

            <TextView
                style="@style/TextViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/tmb_desc" />

            <EditText
                android:id="@+id/edit_tmb_weight"
                style="@style/EditTextArea"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_fitness"
                android:drawablePadding="8dp"
                android:hint="@string/weight"
                android:inputType="number"
                android:maxLength="3" />

            <EditText
                android:id="@+id/edit_tmb_height"
                style="@style/EditTextArea"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_height"
                android:drawablePadding="8dp"
                android:hint="@string/height"
                android:inputType="number"
                android:maxLength="3" />

            <EditText
                android:id="@+id/edit_tmb_age"
                style="@style/EditTextArea"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_age"
                android:drawablePadding="8dp"
                android:hint="@string/tmb_age"
                android:inputType="number"
                android:maxLength="3" />

            <com.google.android.material.textfield.TextInputLayout style="@style/AutoTextViewForm">

                <AutoCompleteTextView
                    android:id="@+id/auto_lifestyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_input"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_tmb_send"
                style="@style/ButtonForm"
                android:background="@drawable/bg_gradient_button"
                android:text="@string/calc" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tmb_toolbar"
                style="@style/EditTextArea"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:elevation="1dp"
                app:titleTextColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>