<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linear_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary700"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="dev.ygordoring.ajude_se.view.WaterCountActivity">

        <ImageView
            android:id="@+id/ic_redefinir"
            android:layout_width="260dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="Oi"
            android:src="@drawable/ajudese_logo_white" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/radius_sugestions"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp">


            <EditText
                android:id="@+id/et_peso"
                style="@style/EditTextArea"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_fitness"
                android:gravity="center"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_idade"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_age"
                android:gravity="center"
                android:hint="@string/hint_idade"
                android:inputType="number"
                android:maxLength="3"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/bt_calcular"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_calcular"
                style="@style/ButtonForm"
                android:layout_marginTop="100dp"
                android:background="@drawable/bg_gradient_button"
                android:text="@string/text_button_calcular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/container_result"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/container_result_ml"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_calcular" />

            <TextView
                android:id="@+id/tv_resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/primary700"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/container_result"
                app:layout_constraintEnd_toEndOf="@id/container_result"
                app:layout_constraintStart_toStartOf="@id/container_result"
                app:layout_constraintTop_toTopOf="@id/container_result" />

            <Button
                android:id="@+id/bt_lembrete"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_gradient_button"
                android:backgroundTint="@color/primary700"
                android:text="@string/txt_button_lembrete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_result" />

            <Button
                android:id="@+id/bt_alarme"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_gradient_button"
                android:backgroundTint="@color/primary700"
                android:text="@string/txt_button_alarme"
                app:layout_constraintEnd_toEndOf="@+id/bt_lembrete"
                app:layout_constraintStart_toStartOf="@+id/bt_lembrete"
                app:layout_constraintTop_toBottomOf="@+id/bt_lembrete" />

            <TextView
                android:id="@+id/txt_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="135dp"
                android:layout_marginTop="4dp"
                android:text="@string/txt_hora"
                android:textColor="@color/black"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@+id/txt_dois_pontos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_alarme" />

            <TextView
                android:id="@+id/txt_dois_pontos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_dois_pontos"
                android:textColor="@color/black"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_alarme" />

            <TextView
                android:id="@+id/txt_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="135dp"
                android:text="@string/txt_min"
                android:textColor="@color/black"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_dois_pontos"
                app:layout_constraintTop_toBottomOf="@+id/bt_alarme" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>